--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This app is will help organize your notes. Title your notes and then include any addition information that you.",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "path": "^0.12.7"
+
   },
   "devDependencies": {},
   "scripts": {
